[package]
name = "bevy_simple_networking"
description = "Simple authoritative server networking library for Bevy"
authors = ["Matthew Fisher <matt.fisher@fishworks.io>"]
repository = "https://github.com/bacongobbler/bevy_simple_networking"
readme = "README.md"
keywords = ["bevy", "gamedev"]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "5d5d7833f0e7bfc90bcb880fad558db6ff2d2ba4" }
bytes = "1"
