[package]
name = "bevy_simple_networking"
description = "Simple authoritative server networking library for Bevy"
authors = ["Matthew Fisher <matt.fisher@fishworks.io>"]
repository = "https://github.com/bacongobbler/bevy_simple_networking"
readme = "README.md"
keywords = ["bevy", "gamedev"]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
bytes = "1"
